--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.0.2",
 		"@commitlint/config-conventional": "^17.0.2",
+		"@types/crypto-js": "^4.1.1",
 		"@types/node": "^17.0.41",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
@@ -54,6 +55,8 @@
 		"@vitejs/plugin-react": "^1.3.0",
 		"autoprefixer": "^10.4.7",
 		"commitizen": "^4.2.4",
+		"crypto-js": "^4.1.1",
+		"csstype": "^3.1.1",
 		"cz-git": "^1.3.4",
 		"eslint": "^8.17.0",
 		"eslint-config-prettier": "^8.5.0",
